# smolbren

./: .coverage  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml  release-plz.toml
.github/workflows/: publish.yaml  publish.yml  release.yml
docs/: .atlas-analysis.json  README.md  design.md  docs.json  index.mdx  installation.mdx  introduction.mdx  quickstart.mdx
docs/cli/: embed.mdx  exit-codes.mdx  get.mdx  index.mdx  links.mdx  output-format.mdx  overview.mdx  query.mdx  search.mdx  similar.mdx  types.mdx  vault.mdx
docs/concepts/: indexing.mdx  ontology.mdx  search.mdx  vaults.mdx
docs/configuration/: config-file.mdx  environment-variables.mdx
docs/guides/: obsidian-setup.mdx  querying-graph.mdx  scripting-agents.mdx
skills/smolbren/: SKILL.md
src/: chunker.rs  cli.rs  config.rs  embed.rs  error.rs  graph.rs  main.rs  ontology.rs  output.rs  search.rs  similarity.rs  vault.rs
src/embedder/: fastembed.rs  hash.rs  mod.rs
src/indexer/: mod.rs  resolve.rs  walk.rs
src/parser/: frontmatter.rs  mod.rs  wikilink.rs
src/smolbren/: __init__.py  cli.py  config.py  embed.py  errors.py  eval.py  extract.py  graph.py  index.py  ingest.py  mcp_server.py  ontology.py  search.py
src/store/: edges.rs  embeddings.rs  mod.rs  notes.rs  schema.rs
tests/: cli.rs  fake_embedder.py  synthetic_vault.py  test_chunking.py  test_cli.py  test_config.py  test_embed.py  test_extract.py  test_graph.py  test_ingest.py  test_keyword_and_hybrid.py  test_rrf.py  test_search.py
tests/fixture_vault/.obsidian/: junk.json
tests/fixture_vault/Journal/: 2026, June 01.md  2026, June 04.md
tests/fixture_vault/blogs/: context-development-lifecycle.md  context-engineering.md  context-platform-engineering.md
tests/fixture_vault/inbox/: scratch.md
tests/fixture_vault/orgs/: junaid-foo.md
tests/fixture_vault/projects/: prism.md
tests/fixture_vault/repos/: smolbren.md
